# croquis

./: .gitignore  CLAUDE.md  README.md  build.py  makefile  pyproject.toml
.github/workflows/: build.yml
croquis/: config_editor.py  constants.py  error_modal.py  i18n.py  main.py  main_menu.py  model.py  monochrome.py  session.py  theme.py  util.py
croquis/locales/: ja.py
croquis/tests/: test_i18n.py  test_model.py  test_monochrome.py  test_util.py
